Adding Auth Server updated build.gradle, and dockerization